export const snapshot = {};

snapshot[`input prompt > should enter some text 1`] = `
stdout:
--------------------------
? Whats your name? (foo) › [28G[G[0J
? Whats your name? (foo) › foo bar[35G[G[0J
? Whats your name? (foo) › foo bar
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;

snapshot[`input prompt with suggestions > should enable suggestions and list 1`] = `
stdout:
--------------------------
? Whats your name? (foo) › 
  foo
  bar
  baz[3A[28G[G[0J
? Whats your name? (foo) › foo
❯ foo[1A[31G[G[0J
? Whats your name? (foo) › foo
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;

snapshot[`input prompt with prefix > should change prefix 1`] = `
stdout:
--------------------------
PREFIX Whats your name? (foo) › [33G[G[0J
PREFIX Whats your name? (foo) › bar[36G[G[0J
PREFIX Whats your name? (foo) › bar
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;

snapshot[`input prompt with writer set to stderr > should enter some text 1`] = `
stdout:
--------------------------

--------------------------
stderr:
--------------------------
? Whats your name? (foo) › [28G[G[0J
? Whats your name? (foo) › foo bar[35G[G[0J
? Whats your name? (foo) › foo bar
[?25h[?25h--------------------------
`;

snapshot[`input prompt without prefix > should disable prefix 1`] = `
stdout:
--------------------------
Whats your name? (foo) › [26G[G[0J
Whats your name? (foo) › bar[29G[G[0J
Whats your name? (foo) › bar
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;

snapshot[`input prompt with no location flag > should work without --location flag 1`] = `
stdout:
--------------------------
? Works without --location? (hope so) › [41G[G[0J
? Works without --location? (hope so) › yes[44G[G[0J
? Works without --location? (hope so) › yes
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;
